--- a/nyc_green_taxi_analysis.ipynb
+++ b/nyc_green_taxi_analysis.ipynb
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "id": "46aa666f",
    "metadata": {},
    "outputs": [],
@@ -1272,12 +1272,12 @@
    "id": "3a046174",
    "metadata": {},
    "source": [
-    "## Calculated Columns "
+    "## Calculated/Merged Columns "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "c407603f",
    "metadata": {},
    "outputs": [],
@@ -1288,226 +1288,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "ae0a388f",
+   "execution_count": 31,
+   "id": "334c8f03",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>VendorID</th>\n",
-       "      <th>lpep_pickup_datetime</th>\n",
-       "      <th>lpep_dropoff_datetime</th>\n",
-       "      <th>store_and_fwd_flag</th>\n",
-       "      <th>RatecodeID</th>\n",
-       "      <th>PULocationID</th>\n",
-       "      <th>DOLocationID</th>\n",
-       "      <th>passenger_count</th>\n",
-       "      <th>trip_distance</th>\n",
-       "      <th>fare_amount</th>\n",
-       "      <th>...</th>\n",
-       "      <th>total_amount</th>\n",
-       "      <th>payment_type</th>\n",
-       "      <th>trip_type</th>\n",
-       "      <th>TotalFareAmount</th>\n",
-       "      <th>Match</th>\n",
-       "      <th>Pickup_Day</th>\n",
-       "      <th>Hour_of_day</th>\n",
-       "      <th>Borough</th>\n",
-       "      <th>Zone</th>\n",
-       "      <th>service_zone</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2018-01-01 00:18:50</td>\n",
-       "      <td>2018-01-01 00:24:39</td>\n",
-       "      <td>N</td>\n",
-       "      <td>1</td>\n",
-       "      <td>236</td>\n",
-       "      <td>236</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.70</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>7.3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>7.3</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Mon</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Manhattan</td>\n",
-       "      <td>Upper East Side North</td>\n",
-       "      <td>Yellow Zone</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2018-01-01 00:30:26</td>\n",
-       "      <td>2018-01-01 00:46:42</td>\n",
-       "      <td>N</td>\n",
-       "      <td>1</td>\n",
-       "      <td>43</td>\n",
-       "      <td>42</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3.50</td>\n",
-       "      <td>14.5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>15.8</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>15.8</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Mon</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Manhattan</td>\n",
-       "      <td>Central Park</td>\n",
-       "      <td>Yellow Zone</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2018-01-01 00:07:25</td>\n",
-       "      <td>2018-01-01 00:19:45</td>\n",
-       "      <td>N</td>\n",
-       "      <td>1</td>\n",
-       "      <td>74</td>\n",
-       "      <td>152</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.14</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>11.3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>11.3</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Mon</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Manhattan</td>\n",
-       "      <td>East Harlem North</td>\n",
-       "      <td>Boro Zone</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2018-01-01 00:32:40</td>\n",
-       "      <td>2018-01-01 00:33:41</td>\n",
-       "      <td>N</td>\n",
-       "      <td>1</td>\n",
-       "      <td>255</td>\n",
-       "      <td>255</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4.3</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Mon</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Brooklyn</td>\n",
-       "      <td>Williamsburg (North Side)</td>\n",
-       "      <td>Boro Zone</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2018-01-01 00:32:40</td>\n",
-       "      <td>2018-01-01 00:33:41</td>\n",
-       "      <td>N</td>\n",
-       "      <td>1</td>\n",
-       "      <td>255</td>\n",
-       "      <td>255</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4.3</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Mon</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Brooklyn</td>\n",
-       "      <td>Williamsburg (North Side)</td>\n",
-       "      <td>Boro Zone</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 25 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   VendorID lpep_pickup_datetime lpep_dropoff_datetime store_and_fwd_flag  \\\n",
-       "0         2  2018-01-01 00:18:50   2018-01-01 00:24:39                  N   \n",
-       "1         2  2018-01-01 00:30:26   2018-01-01 00:46:42                  N   \n",
-       "2         2  2018-01-01 00:07:25   2018-01-01 00:19:45                  N   \n",
-       "3         2  2018-01-01 00:32:40   2018-01-01 00:33:41                  N   \n",
-       "4         2  2018-01-01 00:32:40   2018-01-01 00:33:41                  N   \n",
-       "\n",
-       "   RatecodeID  PULocationID  DOLocationID  passenger_count  trip_distance  \\\n",
-       "0           1           236           236                5           0.70   \n",
-       "1           1            43            42                5           3.50   \n",
-       "2           1            74           152                1           2.14   \n",
-       "3           1           255           255                1           0.03   \n",
-       "4           1           255           255                1           0.03   \n",
-       "\n",
-       "   fare_amount  ...  total_amount  payment_type  trip_type  TotalFareAmount  \\\n",
-       "0          6.0  ...           7.3             2        1.0              7.3   \n",
-       "1         14.5  ...          15.8             2        1.0             15.8   \n",
-       "2         10.0  ...          11.3             2        1.0             11.3   \n",
-       "3          3.0  ...           4.3             3        1.0              4.3   \n",
-       "4          3.0  ...           4.3             2        1.0              4.3   \n",
-       "\n",
-       "   Match  Pickup_Day  Hour_of_day    Borough                       Zone  \\\n",
-       "0   True         Mon            0  Manhattan      Upper East Side North   \n",
-       "1   True         Mon            0  Manhattan               Central Park   \n",
-       "2   True         Mon            0  Manhattan          East Harlem North   \n",
-       "3   True         Mon            0   Brooklyn  Williamsburg (North Side)   \n",
-       "4   True         Mon            0   Brooklyn  Williamsburg (North Side)   \n",
-       "\n",
-       "   service_zone  \n",
-       "0   Yellow Zone  \n",
-       "1   Yellow Zone  \n",
-       "2     Boro Zone  \n",
-       "3     Boro Zone  \n",
-       "4     Boro Zone  \n",
-       "\n",
-       "[5 rows x 25 columns]"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "trips.head()"
+    "#Merge Location data with Trips Data to avoid Operation in Visualization\n",
+    "locations = locations.rename(columns={'LocationID': 'PULocationID'})\n",
+    "trips = pd.merge(trips, locations, on='PULocationID', how='left')"
    ]
   },
   {
@@ -1521,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "eec7f425",
    "metadata": {},
    "outputs": [
@@ -1595,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "45deaeac",
    "metadata": {},
    "outputs": [
@@ -1618,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "e50921f3",
    "metadata": {},
    "outputs": [
@@ -1636,7 +1424,7 @@
        "<AxesSubplot:xlabel='trip_distance'>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1658,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "75fbeb5f",
    "metadata": {},
    "outputs": [
@@ -1676,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "6f8271bf",
    "metadata": {},
    "outputs": [],
@@ -1690,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "145123b7",
    "metadata": {},
    "outputs": [
@@ -1716,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "d0100c83",
    "metadata": {},
    "outputs": [
